2004-03-09  fabian

	* Added margins on the side.
	* Fixed "fast-quit-causing-hangup" problem.
	
2004-03-09  ujwal

	* Fixed a copy/save bug triggered by some blank spaces NOT at end of line.

2004-03-08  ujwal

	* Created a new window controller class for the profiles window.

2004-03-07  ujwal

	* Checking in new preferences UI. Backend code for Color and 
	  Terminal, and Bookmark editor still needs to be done.
	* Fixed [PTYTextView selectedText] and [PTYTextView contentFromX: Y: ToX: Y:] 
	  so that '\n' is inserted only on a hard wrap.
	* Added key mapping action "ignore" to throw away key events.
	* Added support to specify characters to be considered part of word. Will add 
	  regex support later.

2004-03-06  fabian

	* Fixed a bug in VT100Screen that causes crashes.
	* Updated html files.
		
2004-03-05  ujwal
	
	* Made option key setting part of keyboard profile.
	* Built proposed UI for new preferences.

2004-03-04  ujwal

	* Fixed "Send Input to All Tabs" and "Paste".
	* Fixed selection of complete line by dragging.
	* Fixed +ESC behaviour.
	* Changed data structure for key bindings.
	  Previously saved key bindings will be lost :-( Sorry.

2004-03-03  ujwal

	* Made application of transparency more consistent.
	* Common keymapping profile is searched last for a keybinding match.
	* Fixed "select all" in text view.

2004-03-03  fabian

	* Rewrite the selection code. Faster and more consistent.
	
2004-03-02  fabian

	* Fixed bug in copy&paste
	
2004-03-02  ujwal

	* Initial pass at keybinding manager complete. Some more work left, 
	  particularly with the meta key and associating bookmarks with 
	  keyboard profiles.

2004-02-29  ujwal

	* Fixed bug in [PseudoTerminal saveSession:].
	* Added more code for keybinding manager. Still incomplete.

2004-02-27 fabian
	
	* Fixed a bug in [VT100Screen putToken], ANSIECH, which causes a crash.
	
2004-02-27  ujwal

	* Added support for secondary device attribute.